--- a/.vscode/index.html
+++ b/.vscode/index.html
@@ -15,7 +15,7 @@
     <div id="container">
 
         <div id="profile">
-            <img src="assets/avatar.png" alt="Foto de perfil">
+            <img src="assets/perfil_linkedin_circle.png" alt="Foto de perfil">
         <p>Gabriel Pinheiro</p>
         </div>
         <div id="botao" onclick="toggleMode()">
