--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="container">
 
         <div id="profile">
-            <img src="assets/perfil_linkedin_circle.png" alt="Foto de perfil">
+            <img id="foto-perfil" src="assets/foto perfil circular dark.png" alt="Foto de perfil">
         <p>Gabriel Pinheiro</p>
         </div>
         <div id="botao" onclick="toggleMode()">
@@ -28,17 +28,17 @@
                 <a href="#">Portfólio</a>
             </li>
              <li>
-                <a href="#">GitHub</a>
+                <a href="https://github.com/gbpinheiro1" target="_blank">GitHub</a>
             </li>
              <li>
-                <a href="#">LinkedIn</a>
+                <a href="https://www.linkedin.com/in/gabrielpinheirodasilva/" target="_blank">LinkedIn</a>
             </li>
              <li>
-                <a href="#">Instagram</a>
+                <a href="https://www.instagram.com/gpinheirow" target="_blank">Instagram</a>
             </li>
         </ul>
         <div id="redes_sociais">
-            <a href="https://github.com/" target="_blank">
+            <a href="https://github.com/gbpinheiro1" target="_blank">
                 <ion-icon name="logo-github"></ion-icon>
             </a>
 
@@ -54,7 +54,7 @@
 
 <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>   
-<script src="assets/script.js"></script> 
+<script src="script.js"></script> 
 </body>
 
 
