adding button animation and finishing the project

--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
     
         <ul>
             <li>
-                <a href="#">Portfólio</a>
+                <a href="#">Portfólio (Em breve!)</a>
             </li>
              <li>
                 <a href="https://github.com/gbpinheiro1" target="_blank">GitHub</a>
             </li>
              <li>
-                <a href="https://www.linkedin.com/in/gabrielpinheirodasilva/" target="_blank">LinkedIn</a>
+                <a href="https://www.linkedin.com/in/gabriel-pinheiro-da-silva/" target="_blank">LinkedIn</a>
             </li>
              <li>
                 <a href="https://www.instagram.com/gpinheirow" target="_blank">Instagram</a>
@@ -46,7 +46,7 @@
                 <ion-icon name="logo-instagram"></ion-icon>
             </a>
 
-            <a href="https://www.linkedin.com/in/gabrielpinheirodasilva/" target="_blank">
+            <a href="https://www.linkedin.com/in/gabriel-pinheiro-da-silva/" target="_blank">
                 <ion-icon name="logo-linkedin"></ion-icon>
             </a>
         </div>
